Added env var support for min/max len
Added env var support for min/max len
