# docs/swagger.json
@@ -16,23 +16,6 @@
         "version": "1.0"
     },
     "paths": {
-        "/about": {
-            "get": {
-                "description": "Returns Build Information For This Service",
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "About Password Generator",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Version"
-                        }
-                    }
-                }
-            }
-        },
         "/generate": {
             "get": {
                 "description": "Generates somewhat secure-ish passwords",
@@ -97,20 +80,6 @@
                 },
                 "request": {
                     "$ref": "#/definitions/models.RequestParams"
-                }
-            }
-        },
-        "models.Version": {
-            "type": "object",
-            "properties": {
-                "build_timestamp": {
-                    "type": "string"
-                },
-                "commit_hash": {
-                    "type": "string"
-                },
-                "version": {
-                    "type": "string"
                 }
             }
         }
